# representation-invariance-transfer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  actions.py  project_config.yaml  pyproject.toml
scripts/: Dockerfile
src/: main.py
src/dataset_analysis/t2d_dataset/: plotting_utils.py  random_data.ipynb  transforms.ipynb
src/experiments/invariance_transfer/: README.md  config.py  experiment.py  results.py
src/experiments/invariance_transfer/notebooks/: ood_results.ipynb  transformation_breakdown.ipynb
src/experiments/irrelevant_feature_extraction/: README.md  config.py  data.py  eval.ipynb  experiment.py  results.py
src/experiments/transforms_mismatch/: README.md  config.py  data.py  eval.ipynb  experiment.py  results.py
src/experiments/transforms_vs_other/: README.md  config.py  data.py  experiment.py  results.py
src/experiments/transforms_vs_other/notebooks/: cifar_data_checks.ipynb  cifar_eval.ipynb  hyperparam_tuing.ipynb  t2d_eval.ipynb
src/lib_dl_base/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
src/lib_dl_base/dev_ops/: gitignore  setup.sh
src/lib_dl_base/lib_dl_base/defs/: task_id.py
src/lib_dl_base/lib_dl_base/io/: dirs.py  persistence.py
src/lib_dl_base/lib_dl_base/results/: aggregate.py
src/lib_dl_base/lib_dl_base/visualization/: progress.py
src/lib_dl_base/tests/lib_dl_base/defs/: test_task_id.py
src/lib_dl_base/tests/lib_dl_base/io/: test_persistence.py
src/lib_project/: README.md  pyproject.toml  setup.sh
src/lib_project/lib_project/: __init__.py  config_defs.py  experiment.py  project.py
src/lib_project/lib_project/analysis/: aggregate.py
src/lib_project/lib_project/dev_ops/: actions.py  connect_server.py  init_config.py  rsync_exclude_list.txt  run_jobs.py  sync.py  utils.py
src/lib_project/lib_project/dev_ops/docker/: .dockerignore  Dockerfile.base  Dockerfile.final  build.py  docker_utils.py  entrypoint.sh  run.py
src/lib_project/lib_project/dev_ops/slurm/: entrypoint.sh  run_slurm.py
src/lib_project/lib_project/io/: experiment_results.py
src/lib_project/lib_project/notebook/: __init__.py  publish.py  setup.py  upload.py
src/lib_project/lib_project/visualization/: __init__.py  arrange.py  paper_style.py  tables.py
src/lib_project/tests/: test_experiment.py
src/lib_project/tests/analysis/: test_aggregate.py
src/lib_project/tests/io/: test_experiment_results.py
src/lib_vision/: .pre-commit-config.yaml  README.md  pyproject.toml
src/lib_vision/lib_vision/: utils.py
src/lib_vision/lib_vision/data/: __init__.py  loading.py
src/lib_vision/lib_vision/data/utils/: samplers.py
src/lib_vision/lib_vision/data/vision/: cifar.py
src/lib_vision/lib_vision/data/vision/imagenet/: imagenet.py  imagenet_test.ipynb
src/lib_vision/lib_vision/data/vision/synthetic/: random.py
src/lib_vision/lib_vision/data/wrappers/: data_sample.py  module.py  sample_wrapper.py
src/lib_vision/lib_vision/models/architectures/: __init__.py  access.py  create.py
src/lib_vision/lib_vision/models/architectures/cifar/: README.md  densenet.py  resnet.py  vgg.py  vit.py
src/lib_vision/lib_vision/models/inference_recording/: __init__.py  inference_record.py  wrappers.py
src/lib_vision/lib_vision/models/io/: logging.py
src/lib_vision/lib_vision/models/io/persistence/: models.py
src/lib_vision/lib_vision/models/metrics/representations/: batched_metric.py  eval_on_representations.py  invariance.py
src/lib_vision/lib_vision/models/metrics/representations/similarity/: __init__.py  exact.py
src/lib_vision/lib_vision/models/metrics/representations/similarity/cka/: __init__.py  cka_minibatch.py  cka_numpy.py  cka_torch.py
src/lib_vision/lib_vision/models/modifiers/: intermediate_monitoring.py
src/lib_vision/lib_vision/models/training/: __init__.py  fine_tuning.py  multi_training.py  optimization.py  persistence.py  tasks.py  train.py  trainer.py  utils.py
src/lib_vision/lib_vision/models/training/objectives/: __init__.py  adversarial.py  knowledge_distillation.py  rep_similarity.py  supervised.py
src/lib_vision/lib_vision/visualization/: images.py
src/lib_vision/tests/lib_vision/data/wrappers/: test_module.py
src/lib_vision/tests/lib_vision/models/: test_CKA_minibatch.py  test_training.py
src/lib_vision/tests/lib_vision/models/architectures/: test_access.py
src/lib_vision/tests/lib_vision/models/training/: test_multi_training.py
src/transforms_2d/: README.md  __init__.py  create.py  datasets.py  image_utils.py  transforms.py  transforms_2d.py  visualization.ipynb
src/utils/: data.py  invariance_measurement.py
