[tool.poetry]
name = "representation-invariance"
version = "0.4.0"
description = "Exploring the importances of representational invariance for transfer learning"
authors = ["Till Speicher <dev@tillspeicher.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lib_project = { path = "./src/lib_project/", develop = true }
lib_vision = { path = "./src/lib_vision/", develop = true }
lib_dl_base = { path = "./src/lib_dl_base/", develop = true }
plotly = "^5.14.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
kaleido = "0.2.1"
tabulate = "^0.9.0"
datasets = "^2.20.0"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
pytest = "^7.1.3"
pre-commit = "^3.3.3"
huggingface-hub = "^0.23.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = []
executionEnvironments = [{ root = "src" }]

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | \.mypy_cache
    | build
    | dist
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 80
skip_gitignore = true
lines_after_imports = 2
known_first_party = [
  "lib_project",
  "lib_vision",
  "lib_dl_base",
  "experiments",
  "utils",
  "transforms_2d",
]

[tool.flake8]
max-line-length = 81
max-doc-length = 81
max-complexity = 10
ignore = ["E203", "E266", "E501", "W503", "F403", "F401", "E402", "C901"]
per-file-ignores = ["__init__.py:F401", "tests/*:S101"]
exclude = [".git", "__pycache__", "dist"]

[tool.pyright]
include = ["src", "scripts"]
executionEnvironments = [
  { root = "scripts" },
  { root = "tests", extraPaths = [
    "src",
  ] },
]
