[tool.poetry]
name = "lib-vision"
version = "0.1.0"
description = "Library for DL vision training, evaluation and datasets"
authors = ["Till Speicher <dev@tillspeicher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.2.2"
torchvision = "^0.17.2"
numpy = "^1.26.0"
torchmetrics = "^1.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
datasets = "^2.16.0"
wandb = "^0.16.6"
lightning = "^2.2.2"
lora-pytorch = "^0.1.0rc1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
mpi4py = "^3.1.5"

[tool.poetry.group.edit]
optional = true

[tool.poetry.group.edit.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | \.mypy_cache
    | build
    | dist
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 80
skip_gitignore = true
lines_after_imports = 2
known_first_party = ["lib_vision", "lib_dl_base"]
skip = [".gitignore"]

[tool.flake8]
max-line-length = 81
max-doc-length = 81
max-complexity = 10
ignore = ["E203", "E266", "E501", "W503", "F403", "F401", "C901"]
per-file-ignores = ["__init__.py:F401", "tests/*:S101"]
exclude = [".git", "__pycache__", "dist"]

[tool.pyright]
include = ["lib_vision"]
executionEnvironments = [{ root = "tests", extraPaths = ["."] }]
reportMissingImports = true
pythonVersion = "3.10"
# The setup.sh script creates a symbolic link called .venv pointing to
# the virtual environment used by poetry
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
testpaths = ["tests"]
